force-app/main/default/objects/Product_Volume_Information__c/Product_Volume_Information__c.object-meta.xml
<CustomObject>
    <label>Product Volume Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Volume Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Volume Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>