force-app/main/default/objects/Product_Volume_Information__c/fields/Account_Status_Desc__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Status Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>