force-app/main/default/objects/Product_Volume_Information__c/fields/Account_Suffix_Ref__c.field-meta.xml
<CustomField>
    <fullName>Account_Suffix_Ref__c</fullName>
    <description>เลขที่บัญชี+Suffix+ACCOUNT REF</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account/Suffix/Ref</label>
    <length>33</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>