force-app/main/default/objects/Product_Volume_Information__c/fields/Average_Balance_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Average_Balance_Deposit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Balance (Deposit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>