force-app/main/default/objects/Product_Volume_Information__c/fields/Business_Readiness_Level_BRL__c.field-meta.xml
<CustomField>
    <fullName>Business_Readiness_Level_BRL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Readiness Level (BRL)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>