force-app/main/default/objects/Product_Volume_Information__c/fields/Current_4G__c.field-meta.xml
<CustomField>
    <fullName>Current_4G__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current 4G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>