force-app/main/default/objects/Product_Volume_Information__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Volume Informations</relationshipLabel>
    <relationshipName>Product_Volume_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>