force-app/main/default/objects/Product_Volume_Information__c/fields/Ending_Balance_Loan__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance_Loan__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ending Balance (Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>