force-app/main/default/objects/Product_Volume_Information__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Status</label>
    <length>23</length>
    <type>Text</type>
</CustomField>