force-app/main/default/objects/Product_Volume_Information__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Volume Informations</relationshipLabel>
    <relationshipName>Product_Volume_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>