force-app/main/default/objects/Product_Volume_Information__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>