force-app/main/default/objects/Product_Volume_Information__c/fields/RPN_Type__c.field-meta.xml
<CustomField>
    <fullName>RPN_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RPN Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>