force-app/main/default/objects/Product_Volume_Information__c/fields/Sum_Limit_and_AVG_and_Ending_Balnce__c.field-meta.xml
<CustomField>
    <fullName>Sum_Limit_and_AVG_and_Ending_Balnce__c</fullName>
    <formula>Average_Balance_BE__c + Average_Balance_Deposit__c + Average_Balance_Loan__c +  Ending_Balance_BE__c + Ending_Balance_Deposit__c + Ending_Balance_Loan__c + Limit_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Limit and AVG and Ending Balnce</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>