force-app/main/default/objects/Product_Volume_Information__c/fields/TMB_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Account_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Account ID</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>