force-app/main/default/objects/Product_Volume_Information__c/fields/TMB_Ref__c.field-meta.xml
<CustomField>
    <fullName>TMB_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Ref</label>
    <length>17</length>
    <type>Text</type>
</CustomField>