force-app/main/default/objects/Product_Volume_Information__c/fields/TMB_Suffix__c.field-meta.xml
<CustomField>
    <fullName>TMB_Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Suffix</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>